kubernetes/entry-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: entry
spec:
  serviceName: "entry"
  replicas: 1
  selector:
    matchLabels:
      app: entry
  template:
    metadata:
      labels:
        app: entry
    spec:
      containers:
      - name: entry
        image: ghcr.io/aitorru/kuberentry-back:9712335517
        ports:
        - containerPort: 3000
