kubernetes/entry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entry
spec:
  selector:
    app: entry
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
