kubernetes/entry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sonic.tail0edab.ts.net
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: entry
            port:
              number: 3000
  - host: sonic.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: entry
            port:
              number: 3000
